# desync

./: .gitignore  Cargo.toml  README.md  THANKS.md
src/: desync.rs  desync_borrow_future.rs  future_job.rs  job.rs  lib.rs  pipe.rs  scheduler.rs  scheduler_thread.rs  unsafe_job.rs
src/scheduler/: active_queue.rs  core.rs  desync_scheduler.rs  future_sync.rs  job.rs  job_queue.rs  mod.rs  queue_resumer.rs  queue_state.rs  scheduler_future.rs  scheduler_old.rs  scheduler_thread.rs  sync_future.rs  try_sync_error.rs  unsafe_job.rs  wake_queue.rs  wake_thread.rs
tests/: desync.rs  desync_background_blocking.rs  pipe.rs  races.rs  timeout.rs
tests/scheduler/: async.rs  asynchronous.rs  future.rs  future_desync.rs  future_sync.rs  mod.rs  suspend.rs  sync.rs  thread_management.rs  timeout.rs
