[package]
name            = "desync"
version         = "0.1.1"
authors         = ["Andrew Hunter <andrew@logicalshift.io>"]
license         = "Apache-2.0"

description     = "A hassle-free data type for asynchronous programming"
homepage        = "https://github.com/Logicalshift/desync"
repository      = "https://github.com/Logicalshift/desync"
readme          = "README.md"
keywords        = ["async", "futures", "concurrency"]
categories      = ["concurrency","asynchronous","algorithms","data-structures"]

[dependencies]
lazy_static     = "0.2"
num_cpus        = "1.0"
futures         = "0.1.17"
